--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="shop.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,10 +13,10 @@
         <div class="parent1">
             <div class="navbar">
                 <img src="images/treeicon.png" alt="">
-                <a href="http://127.0.0.1:5500/services/index.html">Services</a>
-                <a href="http://127.0.0.1:5500/Blog/index.html">Blog</a>
-                <a href="http://127.0.0.1:5500/foloage/index.html">Shop</a>
-                <a href="http://127.0.0.1:5500/Location/index.html">Location</a>
+                <a href="http://127.0.0.1:5500/Mct%20plant%20project/home.html">Services</a>
+                <a href="http://127.0.0.1:5500/Mct%20plant%20project/blog.html">Blog</a>
+                <a href="http://127.0.0.1:5500/Mct%20plant%20project/shop.html">Shop</a>
+                <a href="http://127.0.0.1:5500/Mct%20plant%20project/location.html">Location</a>
                 <a style="color:black; background-color: #B7EAAF ; padding: 0.5rem 1rem;border-radius: 10px;" href="">Check out(0)</a>
             </div>
         </div>
